<resources>
    <string name="app_name">CampoMarket</string>
    <string name="ttl_iniciar_sesion">Iniciar Sesión</string>
    <string name="placeholderUsuario">Usuario</string>
    <string name="ingresar">Ingresar</string>
    <string name="olvidaste_contrasena">¿Olvidaste tu contraseña?</string>
    <string name="crear_cuenta">Crear nueva cuenta</string>
    <string name="placeholderContrasena">Contraseña</string>
    <string name="ttl_registro">Crear cuenta</string>
    <string name="placeholderNombres">Nombres</string>
    <string name="placeholderApellidos">Apellidos</string>
    <string name="placeholderTipoDoc">Tipo doc</string>
    <string name="placeholderNumId">Numero identificacion</string>
    <string name="placeholderCorreo">Correo electronico</string>
    <string name="placeholderCelular">Celular</string>
    <string name="placeholderDepartamento">Departamento</string>
    <string name="placeholderCiudad">Ciudad</string>
    <string name="placeholderDireccion">Direccion</string>
    <string name="placeholderRol">Selecciona tu rol</string>
    <string name="placeholderConfirmarContraseña">Confirmar contraseña</string>
    <string name="registrar">Registrar</string>
    <string name="yaTienesCuenta">¿Ya tienes una cuenta?</string>
    <string name="ingresaAqui">Ingresar aqui</string>
    <string name="recuperarContraseña">Recuperar Contraseña</string>
    <string name="placeholderIdRecuperarClave">Numero de identificacion registrado</string>
    <string name="recuperar">Recuperar</string>
    <string name="volverInicioSesion">Volver a inicio de sesión</string>
    <string name="labelRecuperarClave">Ingresa el código recibido</string>
    <string name="comprobar">Comprobar</string>
    <string name="productos">Productos</string>
    <string name="clientes">Clientes</string>
    <string name="vendedores">Vendedores</string>
    <string name="mas">Más</string>
    <string name="msgBienvenida">🌱 ¡Bienvenido</string>
    <string name="parrafoBienvenida">"Como administrador de CampoMarket, cultivas el crecimiento de nuestra tienda gestionando productos, vendedores y clientes. Accede a reportes y estadísticas para cosechar el éxito de nuestra tienda. "</string>
    <string name="tiendas">Tiendas</string>
    <string name="mis_productos">Mis productos</string>
    <string name="placeholderBarraBusqueda">¿Qué producto estas buscando?</string>
    <string name="ttl_carrito">Resumen de compra</string>
    <string name="msgResumenCompra">"El total de tus productos es: "</string>
    <string name="comprar">Comprar</string>
    <string name="ttl_categorias">Explora Nuestro Catálogo</string>
    <string name="parrafoCategorias">Para encontrar lo que necesitas, elige una categoría como frutas, verduras o lácteos y usa los filtros para encontrar tu producto más rápido.</string>
    <string name="frutas">Frutas</string>
    <string name="tuberculos">Tuberculos</string>
    <string name="verduras">Verduras</string>
    <string name="quesos">Quesos artesanales</string>
    <string name="granosYLegumbres">Granos y legumbres</string>
    <string name="todosProductos">Ver todos los productos</string>
    <string name="editar_producto">Editar producto</string>
    <string name="labelProducto">Nombre producto</string>
    <string name="labelValorUnidaq">Valor unitario</string>
    <string name="labelValorLibra">Valor por libra</string>
    <string name="labelDisponibilidad">Disponibilidad (en libras)</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="ttlClientes">Compradores</string>
    <string name="parrafoClientes">Administra la lista de compradores, busca fácilmente con la barra de búsqueda y edita sus datos directamente en la tabla.</string>
    <string name="ttlVendedores">Vendedores</string>
    <string name="parrafoVendedores">Administra la lista de vendedores, busca fácilmente con la barra de búsqueda y edita sus datos directamente en la tabla.</string>
    <string name="ttl_opciones">Opciones</string>
    <string name="ubicacionTiendas">Ubicación de tiendas</string>
    <string name="editar_mi_cuenta">Editar mi cuenta</string>
    <string name="cerrarSesion">Cerrar sesión</string>
    <string name="copyright1">© 2025 CampoMarket</string>
    <string name="copyright2">Todos los derechos reservados</string>
    <string name="copyright3">Versión 1.0</string>
    <string name="ttl_tiendas">Puntos fisicos</string>
    <string name="parrafoTiendas">Explora nuestras tres ubicaciones físicas y encuentra la más cercana a ti. ¡Estamos listos para atenderte!</string>
    <string name="buscar_tiendas">Encontrar la más cercana</string>
    <string name="bodega1">Bodega Norte</string>
    <string name="direccion1">Dirección: Calle 170 # 15-50, Bogotá</string>
    <string name="telefono1">Teléfono: (601) 745-8890</string>
    <string name="bodega2">Bodega Centro</string>
    <string name="direccion2">Dirección: Carrera 10 # 22-30, Bogotá</string>
    <string name="telefono2">Teléfono: (601) 320-4567</string>
    <string name="bodega3">Bodega Sur</string>
    <string name="direccion3">Dirección: Avenida Primero de Mayo # 68 -\n20, Bogotá</string>
    <string name="telefono3">Teléfono: (601) 320-4567</string>
    <string name="mi_cuenta">Mi cuenta</string>
    <string name="cambiar_clave">Cambiar clave</string>
    <string name="placeholderContrasenaActual">Contraseña actual</string>
    <string name="placeholderNuevaContraseña">Nueva Contraseña</string>
    <string name="mis_compras">Mis compras</string>
    <string name="ttl_compras">Histórico de compras</string>
    <string name="mis_ventas">Mis ventas</string>
    <string name="ttl_ventas">Histórico de ventas</string>
    <string name="crear_cliente">Crear nuevo cliente</string>
    <string name="crear_vendedor">Crear nuevo vendedor</string>
    <string name="ingresarGoogle">Ingresar con Google</string>
    <string name="finalizar_registro">Terminar de registrarme</string>
    <string name="ttl_completar">Completar campos</string>
    <string name="subNombre">"Nombre: "</string>
    <string name="subTipoDoc">"Tipo doc: "</string>
    <string name="subId">"N° Identificación: "</string>
    <string name="subCelular">"Celular: "</string>
    <string name="subCorreo">"Correo: "</string>
    <string name="subDepartamento">"Departamento: "</string>
    <string name="subCiudad">"Ciudad: "</string>
    <string name="subDireccion">"Dirección: "</string>
    <string name="editar_usuario">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="ttlProductos">Mis productos</string>
    <string name="parrafoProductos">Administra la lista de tus productos, crea, busca fácilmente con la barra de búsqueda y edita sus datos directamente en la tabla.</string>
    <string name="crear_producto">Crear producto</string>
    <string name="subValorU">"Valor unitario: "</string>
    <string name="subValorL">"Valor por libra: "</string>
    <string name="subDisponibilidad">"Disponibilidad: "</string>
    <string name="subCategoria">"Categoria: "</string>
    <string name="seleccionar_imagen">Seleccionar imagen</string>
    <string name="placeholder_categoria">Categoria</string>
    <string name="ttl_crear_producto">Crear producto</string>
    <string name="imagen">Imagen del producto</string>
    <string name="labelEmail">Email de vendedor</string>
    <string name="cambiar_imagen">Modificar imagen</string>
    <string name="agregar">Agregar</string>
</resources>