<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:background="@color/blanco"
    android:id="@+id/layoutFragmentRegistro">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/iconFragmentRegistro"
            android:layout_width="157dp"
            android:layout_height="157dp"
            android:src="@drawable/logo"/>

        <TextView
            android:id="@+id/ttlFragmentRegistro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/ttl_completar"
            android:textAlignment="center"
            android:textColor="@color/naranja"
            android:textSize="28sp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end">

            <Spinner
                android:id="@+id/spinnerTipoIdentificacion"
                style="@style/EditTextConSombra"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_weight="1"
                android:prompt="@string/placeholderTipoDoc"
                android:spinnerMode="dropdown"
                android:minHeight="50dp"
                android:paddingStart="10dp"/>

            <EditText
                android:id="@+id/idFieldFragmentRegistro"
                style="@style/EditTextConSombra"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textColorHint="@color/gris"
                android:hint="@string/placeholderNumId"
                android:layout_marginStart="10dp"
                android:inputType="number"/>

        </LinearLayout>

        <EditText
            android:id="@+id/celularFieldFragmentRegistro"
            style="@style/EditTextConSombra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/gris"
            android:hint="@string/placeholderCelular"
            android:inputType="phone"/>

        <EditText
            android:id="@+id/departamentoFieldFragmentRegistro"
            style="@style/EditTextConSombra"
            android:layout_width="match_parent"
            android:textColorHint="@color/gris"
            android:layout_height="wrap_content"
            android:hint="@string/placeholderDepartamento"
            android:inputType="text"/>

        <EditText
            android:id="@+id/ciudadFieldFragmentRegistro"
            style="@style/EditTextConSombra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/gris"
            android:hint="@string/placeholderCiudad"
            android:inputType="text"/>

        <EditText
            android:id="@+id/direccionFieldFragmentRegistro"
            style="@style/EditTextConSombra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/gris"
            android:hint="@string/placeholderDireccion"
            android:inputType="text"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end">

            <Spinner
                android:id="@+id/spinnerRol"
                style="@style/EditTextConSombra"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_weight="1"
                android:prompt="@string/placeholderRol"
                android:spinnerMode="dropdown"
                android:minHeight="50dp"
                android:paddingStart="10dp"/>

        </LinearLayout>

        <EditText
            android:id="@+id/passFieldFragmentRegistro"
            style="@style/EditTextConSombra"
            android:layout_width="match_parent"
            android:textColorHint="@color/gris"
            android:layout_height="wrap_content"
            android:hint="@string/placeholderContrasena"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/validatePassFieldFragmentRegistro"
            style="@style/EditTextConSombra"
            android:textColorHint="@color/gris"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/placeholderConfirmarContraseña"
            android:inputType="textPassword"/>

        <!--SE USA MATERIAL BUTTON EN VEZ DE BUTTON PARA EVITAR EL COLOR MORADO POR DEFECTO-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnFinalizarRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/finalizar_registro"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:fontFamily="@font/nunito_bold"
            app:cornerRadius="5dp"
            app:backgroundTint="@color/naranja"
            style="@style/Widget.Material3.Button"
            android:layout_marginTop="15dp"
            android:padding="10dp"/>


    </LinearLayout>

</ScrollView>